// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render the MediaCollection 1`] = `
<div
  class="dropzone"
  role="presentation"
  tabindex="0"
>
  <div>
    <div
      class="collectionSection"
    >
      <div
        class="left"
      >
        <ul
          class="breadcrumb"
        >
          <li>
            <button
              class="item"
              disabled=""
              type="button"
            >
              sulu_media.all_media
            </button>
          </li>
        </ul>
      </div>
      <div
        class="right"
      >
        <div
          class="buttonGroup"
        >
          <button
            class="button icon hasText button"
            type="button"
          >
            <span
              aria-label="su-plus"
              class="su-plus buttonIcon"
            />
            <span
              class="buttonText"
            >
              sulu_media.add_collection
            </span>
          </button>
          <button
            class="button icon button"
            type="button"
          >
            <span
              aria-label="su-cog"
              class="su-cog buttonIcon"
            />
            <span
              aria-label="su-angle-down"
              class="su-angle-down dropdownIcon"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="listContainer"
    >
      <div
        class="list"
      >
        <section>
          <ul
            class="folderList"
          >
            <li>
              <div
                class="folder"
                role="button"
                tabindex="0"
              >
                <div
                  class="iconContainer"
                >
                  <span
                    aria-label="su-folder"
                    class="su-folder"
                  />
                </div>
                <div
                  class="description"
                >
                  <h5
                    class="title"
                  >
                    Title 1
                  </h5>
                  <div
                    class="info"
                  >
                    1 sulu_admin.object
                  </div>
                </div>
              </div>
            </li>
            <li>
              <div
                class="folder"
                role="button"
                tabindex="0"
              >
                <div
                  class="iconContainer"
                >
                  <span
                    aria-label="su-folder"
                    class="su-folder"
                  />
                </div>
                <div
                  class="description"
                >
                  <h5
                    class="title"
                  >
                    Title 2
                  </h5>
                  <div
                    class="info"
                  >
                    0 sulu_admin.objects
                  </div>
                </div>
              </div>
            </li>
          </ul>
          <nav
            class="pagination"
          >
            <span
              class="display"
            >
              sulu_admin.per_page:
            </span>
            <span>
              <div
                class="select"
                role="none"
              >
                <button
                  class="displayValue dark"
                  type="button"
                >
                  <div
                    aria-label="10"
                    class="croppedText"
                    title="10"
                  >
                    <div
                      aria-hidden="true"
                      class="front"
                    >
                      1
                    </div>
                    <div
                      aria-hidden="true"
                      class="back"
                    >
                      <span>
                        0
                      </span>
                    </div>
                    <div
                      class="whole"
                    >
                      10
                    </div>
                  </div>
                  <span
                    aria-label="su-angle-down"
                    class="su-angle-down toggle"
                  />
                </button>
              </div>
            </span>
            <div
              class="loader"
            />
            <span>
              sulu_admin.page:
            </span>
            <span
              class="inputContainer"
            >
              <div
                class="input dark center"
              >
                <input
                  inputmode="numeric"
                  type="text"
                  value="1"
                />
              </div>
            </span>
            <span
              class="display"
            >
              sulu_admin.of 3
            </span>
            <div
              class="buttonGroup"
            >
              <button
                class="button icon button"
                type="button"
              >
                <span
                  aria-label="su-angle-left"
                  class="su-angle-left buttonIcon"
                />
              </button>
              <button
                class="button icon button"
                type="button"
              >
                <span
                  aria-label="su-angle-right"
                  class="su-angle-right buttonIcon"
                />
              </button>
            </div>
          </nav>
        </section>
      </div>
    </div>
  </div>
  <div
    class="divider"
  />
  <div
    class="listContainer"
  >
    <div
      class="toolbar"
    >
      <div
        class="toolbarLeft"
      >
        <label
          aria-label="sulu_admin.list_search_placeholder"
        >
          <div
            class="input dark left collapsed hasAppendIcon"
          >
            <div
              class="prependedContainer dark collapsed"
            >
              <span
                aria-label="su-search"
                class="su-search clickable icon dark iconClickable collapsed"
                role="button"
                tabindex="0"
              />
            </div>
            <input
              placeholder="sulu_admin.list_search_placeholder"
              type="text"
              value=""
            />
          </div>
        </label>
      </div>
      <div
        class="toolbarRight"
      >
        <button
          class="button icon hasText"
          type="button"
        >
          <span
            aria-label="su-upload"
            class="su-upload buttonIcon"
          />
          <span
            class="buttonText"
          >
            sulu_media.upload_file
          </span>
        </button>
      </div>
    </div>
    <div
      class="list"
    >
      <section>
        <div>
          <ul
            class="masonry"
          >
            <li
              style="margin-bottom:30px"
            >
              <div
                class="mediaCard"
              >
                <div
                  class="header"
                >
                  <div
                    class="description"
                    role="button"
                    tabindex="0"
                  >
                    <div
                      class="title"
                    >
                      <label
                        class="label"
                        tabindex="-1"
                      >
                        <span
                          class="switch checkbox dark checkbox"
                        >
                          <input
                            type="checkbox"
                            value="1"
                          />
                          <span />
                        </span>
                        <div>
                          <div
                            class="titleText"
                          >
                            <div
                              aria-label="Title 1"
                              class="croppedText"
                              title="Title 1"
                            >
                              <div
                                aria-hidden="true"
                                class="front"
                              >
                                Titl
                              </div>
                              <div
                                aria-hidden="true"
                                class="back"
                              >
                                <span>
                                  e 1
                                </span>
                              </div>
                              <div
                                class="whole"
                              >
                                Title 1
                              </div>
                            </div>
                          </div>
                        </div>
                      </label>
                    </div>
                    <div
                      class="meta"
                    >
                      <div
                        aria-label="image/png 12.35 KB"
                        class="croppedText"
                        title="image/png 12.35 KB"
                      >
                        <div
                          aria-hidden="true"
                          class="front"
                        >
                          image/png
                        </div>
                        <div
                          aria-hidden="true"
                          class="back"
                        >
                          <span>
                             12.35 KB
                          </span>
                        </div>
                        <div
                          class="whole"
                        >
                          image/png 12.35 KB
                        </div>
                      </div>
                    </div>
                  </div>
                  <div>
                    <button
                      class="downloadButton"
                      type="button"
                    >
                      <span
                        aria-label="su-download"
                        class="su-download"
                      />
                    </button>
                  </div>
                </div>
                <div
                  class="media"
                  role="button"
                  tabindex="0"
                >
                  <img
                    alt="Title 1"
                    src="http://lorempixel.com/240/100"
                  />
                  <div
                    class="spinner"
                    style="width:40px;height:40px"
                  >
                    <div
                      class="doubleBounce1"
                    />
                    <div
                      class="doubleBounce2"
                    />
                  </div>
                  <div
                    class="cover"
                  >
                    <span
                      aria-label="su-pen"
                      class="su-pen mediaIcon"
                    />
                  </div>
                </div>
              </div>
            </li>
            <li
              style="margin-bottom:30px"
            >
              <div
                class="mediaCard"
              >
                <div
                  class="header"
                >
                  <div
                    class="description"
                    role="button"
                    tabindex="0"
                  >
                    <div
                      class="title"
                    >
                      <label
                        class="label"
                        tabindex="-1"
                      >
                        <span
                          class="switch checkbox dark checkbox"
                        >
                          <input
                            type="checkbox"
                            value="2"
                          />
                          <span />
                        </span>
                        <div>
                          <div
                            class="titleText"
                          >
                            <div
                              aria-label="Title 1"
                              class="croppedText"
                              title="Title 1"
                            >
                              <div
                                aria-hidden="true"
                                class="front"
                              >
                                Titl
                              </div>
                              <div
                                aria-hidden="true"
                                class="back"
                              >
                                <span>
                                  e 1
                                </span>
                              </div>
                              <div
                                class="whole"
                              >
                                Title 1
                              </div>
                            </div>
                          </div>
                        </div>
                      </label>
                    </div>
                    <div
                      class="meta"
                    >
                      <div
                        aria-label="image/jpeg 54.32 KB"
                        class="croppedText"
                        title="image/jpeg 54.32 KB"
                      >
                        <div
                          aria-hidden="true"
                          class="front"
                        >
                          image/jpeg
                        </div>
                        <div
                          aria-hidden="true"
                          class="back"
                        >
                          <span>
                             54.32 KB
                          </span>
                        </div>
                        <div
                          class="whole"
                        >
                          image/jpeg 54.32 KB
                        </div>
                      </div>
                    </div>
                  </div>
                  <div>
                    <button
                      class="downloadButton"
                      type="button"
                    >
                      <span
                        aria-label="su-download"
                        class="su-download"
                      />
                    </button>
                  </div>
                </div>
                <div
                  class="media"
                  role="button"
                  tabindex="0"
                >
                  <img
                    alt="Title 1"
                    src="http://lorempixel.com/240/100"
                  />
                  <div
                    class="spinner"
                    style="width:40px;height:40px"
                  >
                    <div
                      class="doubleBounce1"
                    />
                    <div
                      class="doubleBounce2"
                    />
                  </div>
                  <div
                    class="cover"
                  >
                    <span
                      aria-label="su-pen"
                      class="su-pen mediaIcon"
                    />
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
        <div
          class="indicator"
        />
      </section>
    </div>
  </div>
  <input
    multiple=""
    style="border:0;clip:rect(0, 0, 0, 0);clip-path:inset(50%);height:1px;margin:0 -1px -1px 0;overflow:hidden;padding:0;position:absolute;width:1px;white-space:nowrap"
    tabindex="-1"
    type="file"
  />
</div>
`;

exports[`Render the MediaCollection for all media 1`] = `
<div
  class="dropzone"
  role="presentation"
  tabindex="0"
>
  <div>
    <div
      class="collectionSection"
    >
      <div
        class="left"
      >
        <ul
          class="breadcrumb"
        >
          <li>
            <button
              class="item"
              disabled=""
              type="button"
            >
              sulu_media.all_media
            </button>
          </li>
        </ul>
      </div>
      <div
        class="right"
      >
        <div
          class="buttonGroup"
        >
          <button
            class="button icon hasText button"
            type="button"
          >
            <span
              aria-label="su-plus"
              class="su-plus buttonIcon"
            />
            <span
              class="buttonText"
            >
              sulu_media.add_collection
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="listContainer"
    >
      <div
        class="list"
      >
        <section>
          <ul
            class="folderList"
          >
            <li>
              <div
                class="folder"
                role="button"
                tabindex="0"
              >
                <div
                  class="iconContainer"
                >
                  <span
                    aria-label="su-folder"
                    class="su-folder"
                  />
                </div>
                <div
                  class="description"
                >
                  <h5
                    class="title"
                  >
                    Title 1
                  </h5>
                  <div
                    class="info"
                  >
                    1 sulu_admin.object
                  </div>
                </div>
              </div>
            </li>
            <li>
              <div
                class="folder"
                role="button"
                tabindex="0"
              >
                <div
                  class="iconContainer"
                >
                  <span
                    aria-label="su-folder"
                    class="su-folder"
                  />
                </div>
                <div
                  class="description"
                >
                  <h5
                    class="title"
                  >
                    Title 2
                  </h5>
                  <div
                    class="info"
                  >
                    0 sulu_admin.objects
                  </div>
                </div>
              </div>
            </li>
          </ul>
          <nav
            class="pagination"
          >
            <span
              class="display"
            >
              sulu_admin.per_page:
            </span>
            <span>
              <div
                class="select"
                role="none"
              >
                <button
                  class="displayValue dark"
                  type="button"
                >
                  <div
                    aria-label="10"
                    class="croppedText"
                    title="10"
                  >
                    <div
                      aria-hidden="true"
                      class="front"
                    >
                      1
                    </div>
                    <div
                      aria-hidden="true"
                      class="back"
                    >
                      <span>
                        0
                      </span>
                    </div>
                    <div
                      class="whole"
                    >
                      10
                    </div>
                  </div>
                  <span
                    aria-label="su-angle-down"
                    class="su-angle-down toggle"
                  />
                </button>
              </div>
            </span>
            <div
              class="loader"
            />
            <span>
              sulu_admin.page:
            </span>
            <span
              class="inputContainer"
            >
              <div
                class="input dark center"
              >
                <input
                  inputmode="numeric"
                  type="text"
                  value="1"
                />
              </div>
            </span>
            <span
              class="display"
            >
              sulu_admin.of 3
            </span>
            <div
              class="buttonGroup"
            >
              <button
                class="button icon button"
                type="button"
              >
                <span
                  aria-label="su-angle-left"
                  class="su-angle-left buttonIcon"
                />
              </button>
              <button
                class="button icon button"
                type="button"
              >
                <span
                  aria-label="su-angle-right"
                  class="su-angle-right buttonIcon"
                />
              </button>
            </div>
          </nav>
        </section>
      </div>
    </div>
  </div>
  <div
    class="divider"
  />
  <div
    class="listContainer"
  >
    <div
      class="toolbar"
    >
      <div
        class="toolbarLeft"
      >
        <label
          aria-label="sulu_admin.list_search_placeholder"
        >
          <div
            class="input dark left collapsed hasAppendIcon"
          >
            <div
              class="prependedContainer dark collapsed"
            >
              <span
                aria-label="su-search"
                class="su-search clickable icon dark iconClickable collapsed"
                role="button"
                tabindex="0"
              />
            </div>
            <input
              placeholder="sulu_admin.list_search_placeholder"
              type="text"
              value=""
            />
          </div>
        </label>
      </div>
      <div
        class="toolbarRight"
      >
        <button
          class="button icon hasText"
          type="button"
        >
          <span
            aria-label="su-upload"
            class="su-upload buttonIcon"
          />
          <span
            class="buttonText"
          >
            sulu_media.upload_file
          </span>
        </button>
      </div>
    </div>
    <div
      class="list"
    >
      <section>
        <div>
          <ul
            class="masonry"
          >
            <li
              style="margin-bottom:30px"
            >
              <div
                class="mediaCard"
              >
                <div
                  class="header"
                >
                  <div
                    class="description"
                    role="button"
                    tabindex="0"
                  >
                    <div
                      class="title"
                    >
                      <label
                        class="label"
                        tabindex="-1"
                      >
                        <span
                          class="switch checkbox dark checkbox"
                        >
                          <input
                            type="checkbox"
                            value="1"
                          />
                          <span />
                        </span>
                        <div>
                          <div
                            class="titleText"
                          >
                            <div
                              aria-label="Title 1"
                              class="croppedText"
                              title="Title 1"
                            >
                              <div
                                aria-hidden="true"
                                class="front"
                              >
                                Titl
                              </div>
                              <div
                                aria-hidden="true"
                                class="back"
                              >
                                <span>
                                  e 1
                                </span>
                              </div>
                              <div
                                class="whole"
                              >
                                Title 1
                              </div>
                            </div>
                          </div>
                        </div>
                      </label>
                    </div>
                    <div
                      class="meta"
                    >
                      <div
                        aria-label="image/png 12.35 KB"
                        class="croppedText"
                        title="image/png 12.35 KB"
                      >
                        <div
                          aria-hidden="true"
                          class="front"
                        >
                          image/png
                        </div>
                        <div
                          aria-hidden="true"
                          class="back"
                        >
                          <span>
                             12.35 KB
                          </span>
                        </div>
                        <div
                          class="whole"
                        >
                          image/png 12.35 KB
                        </div>
                      </div>
                    </div>
                  </div>
                  <div>
                    <button
                      class="downloadButton"
                      type="button"
                    >
                      <span
                        aria-label="su-download"
                        class="su-download"
                      />
                    </button>
                  </div>
                </div>
                <div
                  class="media"
                  role="button"
                  tabindex="0"
                >
                  <img
                    alt="Title 1"
                    src="http://lorempixel.com/240/100"
                  />
                  <div
                    class="spinner"
                    style="width:40px;height:40px"
                  >
                    <div
                      class="doubleBounce1"
                    />
                    <div
                      class="doubleBounce2"
                    />
                  </div>
                  <div
                    class="cover"
                  >
                    <span
                      aria-label="su-pen"
                      class="su-pen mediaIcon"
                    />
                  </div>
                </div>
              </div>
            </li>
            <li
              style="margin-bottom:30px"
            >
              <div
                class="mediaCard"
              >
                <div
                  class="header"
                >
                  <div
                    class="description"
                    role="button"
                    tabindex="0"
                  >
                    <div
                      class="title"
                    >
                      <label
                        class="label"
                        tabindex="-1"
                      >
                        <span
                          class="switch checkbox dark checkbox"
                        >
                          <input
                            type="checkbox"
                            value="2"
                          />
                          <span />
                        </span>
                        <div>
                          <div
                            class="titleText"
                          >
                            <div
                              aria-label="Title 1"
                              class="croppedText"
                              title="Title 1"
                            >
                              <div
                                aria-hidden="true"
                                class="front"
                              >
                                Titl
                              </div>
                              <div
                                aria-hidden="true"
                                class="back"
                              >
                                <span>
                                  e 1
                                </span>
                              </div>
                              <div
                                class="whole"
                              >
                                Title 1
                              </div>
                            </div>
                          </div>
                        </div>
                      </label>
                    </div>
                    <div
                      class="meta"
                    >
                      <div
                        aria-label="image/jpeg 54.32 KB"
                        class="croppedText"
                        title="image/jpeg 54.32 KB"
                      >
                        <div
                          aria-hidden="true"
                          class="front"
                        >
                          image/jpeg
                        </div>
                        <div
                          aria-hidden="true"
                          class="back"
                        >
                          <span>
                             54.32 KB
                          </span>
                        </div>
                        <div
                          class="whole"
                        >
                          image/jpeg 54.32 KB
                        </div>
                      </div>
                    </div>
                  </div>
                  <div>
                    <button
                      class="downloadButton"
                      type="button"
                    >
                      <span
                        aria-label="su-download"
                        class="su-download"
                      />
                    </button>
                  </div>
                </div>
                <div
                  class="media"
                  role="button"
                  tabindex="0"
                >
                  <img
                    alt="Title 1"
                    src="http://lorempixel.com/240/100"
                  />
                  <div
                    class="spinner"
                    style="width:40px;height:40px"
                  >
                    <div
                      class="doubleBounce1"
                    />
                    <div
                      class="doubleBounce2"
                    />
                  </div>
                  <div
                    class="cover"
                  >
                    <span
                      aria-label="su-pen"
                      class="su-pen mediaIcon"
                    />
                  </div>
                </div>
              </div>
            </li>
          </ul>
        </div>
        <div
          class="indicator"
        />
      </section>
    </div>
  </div>
  <input
    multiple=""
    style="border:0;clip:rect(0, 0, 0, 0);clip-path:inset(50%);height:1px;margin:0 -1px -1px 0;overflow:hidden;padding:0;position:absolute;width:1px;white-space:nowrap"
    tabindex="-1"
    type="file"
  />
</div>
`;
